Fix css and translation of time selector on mobile

--- a/src/components/timeselector/style/timeselector.less
+++ b/src/components/timeselector/style/timeselector.less
@@ -24,7 +24,15 @@
   -webkit-box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.175);   
   padding: 5px;
-  overflow: hidden; 
+  overflow: hidden;
+  
+  &.mobile {
+    margin-left: -75px;
+    
+    @media screen and (max-width: @screen-phone) {
+      top: 57px;
+    } 
+  }
 }
 
 .time-selector-bt {  
